--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body{
+html,body{
     overflow-x: hidden;
 }
 
@@ -23,7 +23,6 @@ body{
     width: 1271px;
     height: 1302px;
     margin-top: -29px;
-    overflow: hidden;
 }
 
 #btnlogin{
@@ -63,5 +62,8 @@ body{
         margin-top: 150px;
     }
     
+    #borda{
+        margin-left: 400px;
+    }
     
 }
