--- a/main.css
+++ b/main.css
@@ -20,8 +20,8 @@ html,body{
     z-index: 0;
     background-color: rgb(233, 227, 227);
     border-radius: 500px;
-    width: 1271px;
-    height: 1302px;
+    width: 100%;
+    height: 100%;
     margin-top: -29px;
 }
 
@@ -34,6 +34,7 @@ html,body{
 #btnexpandir button{
     border-radius: 1000px;
     width: 327px;
+    
 }
 
 #btnexpandir button i{
@@ -48,7 +49,7 @@ html,body{
 #pagina2{
     margin-top: 800px;
     z-index: 2;
-    background-color: #E5E5E5;
+    background-color: #ffffff;
 }
 
 #pagina2 h1,p,h4{
@@ -60,13 +61,15 @@ html,body{
 }
 
 #pagina2 img{
-    justify-content: center;
+    justify-content:center;
 }
 
 #pagina2 .colunas{
-    background-color: #83baf8;
+    background-color: #7cb4f5;
     border-radius: 10px;
+    width: 90%;
 }
+
 @media (min-width: 768px){
     #iceberg img{
         width: 60%;
@@ -86,6 +89,8 @@ html,body{
     
     #borda{
         margin-left: 600px;
+        width: 1271px;
+        height: 1302px;
     }
     
 }
