--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ html,body{
 }
 
 #pagina2{
-    margin-top: 800px;
+    margin-top: 490px;
     z-index: 2;
     background-color: #ffffff;
 }
@@ -60,15 +60,29 @@ html,body{
     color: white;
 }
 
-#pagina2 img{
-    justify-content:center;
-}
 
 #pagina2 .colunas{
     background-color: #7cb4f5;
     border-radius: 10px;
     width: 90%;
 }
+
+.hvr-grow-shadow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+  }
+  .hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
 
 @media (min-width: 768px){
     #iceberg img{
@@ -93,4 +107,7 @@ html,body{
         height: 1302px;
     }
     
+    #pagina2{
+        margin-top: 800px;
+    }
 }
