--- a/main.css
+++ b/main.css
@@ -18,11 +18,9 @@ html,body{
 
 #borda{
     z-index: 0;
-    background-color: rgb(233, 227, 227);
-    border-radius: 500px;
     width: 100%;
     height: 100%;
-    margin-top: -29px;
+    margin-left: 0;
 }
 
 #btnlogin{
@@ -131,10 +129,10 @@ html,body{
 
 @media (min-width: 768px){
     #iceberg img{
-        width: 60%;
-        height: 60%;
+        width: 80%;
+        height: 80%;
         margin-top: -150px;
-        margin-left: 600px;
+        margin-left: 62%;
         
     }
 
@@ -147,9 +145,7 @@ html,body{
     }
     
     #borda{
-        margin-left: 600px;
-        width: 1271px;
-        height: 1302px;
+        margin-left: 45%;
     }
     
     #pagina2{
