--- a/consultoria.css
+++ b/consultoria.css
@@ -1,11 +1,4 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  body {
-    font-family: "Montserrat";
-  }
+
   .section1 {
     width: 100%;
     display: flex;
@@ -47,7 +40,6 @@
     padding: 20px;
     font-size: 24px;
     border-radius: 8px;
-    font-family: "Montserrat";
     color: rgb(27, 166, 247);
     text-align: center;
     cursor: pointer;
@@ -137,10 +129,28 @@
     border-bottom: 2px solid;
     border-color: #0A7BFC;
   }
-  
+
   #btnlogin{
     visibility: hidden;
   }
   
   
-  
+  footer{
+    padding-left: 5%;
+    margin-top: 70%;
+}
+
+footer ul{
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    padding-top: 5%;
+}
+
+footer ul li{
+    padding-right: 20px;
+}
+
+footer p {
+    margin-bottom: 0;
+}
