--- a/sobre.css
+++ b/sobre.css
@@ -20,7 +20,7 @@ html,body{
   }
   
   nav ul li{
-    padding-right: 40%;
+    padding-right: 20%;
     font-size: 20px;
   }
   
@@ -86,4 +86,8 @@ footer ul li{
 
 footer p {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+
 }
