--- a/sobre.css
+++ b/sobre.css
@@ -45,13 +45,33 @@ html,body{
 
   .pg2{
       margin-top: 5%;
-      height: 50%;
       text-align: center;
   }
 
   .pg2-1{
     width: 50%;
     margin-left: 25%;
+    text-align:justify;
+  }
+
+  .espaco{
+    margin-top: 200px;
+  }
+
+  #sobrenos{
+    width: 50%;
+    margin-top: 40%;
+    float: left;
+  }
+
+  .lado{
+    height: 800px;
+  }
+
+  .lado2{
+    background-color: #AED1FA;
+    width: 50%;
+    height: 800px;
   }
 
   .pg3{
@@ -59,13 +79,35 @@ html,body{
     height: 50%;
     width: 80%;
     margin-left: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
 }
 .pg3-1{
   width: 50%;
   margin-left: 25%;
+}
+
+.caixinhas{
+  background-color: #F3F2F2;
+  width: 80%;
+  text-align: center;
+  height: 300px;
+}
+
+.caixa{
+  position: absolute;
+  z-index: 0;
+}
+
+.foto{
+  background-color: red;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin-left: 20%;
+  margin-bottom: 10%;
+  background-image: url('imagem.png');
+  position: absolute;
+  z-index: 1;
 }
 
 footer{
