--- a/contato.css
+++ b/contato.css
@@ -3,6 +3,19 @@ html,body{
     background-color:aliceblue;
   }
   
+  #logo{
+    padding-top: 15%;
+    padding-left: 0;
+  }
+  
+  nav.navbar.navbar-expand-md.navbar-light.bg-sm-light.stick-top {
+    padding-left: 0;
+  }
+  
+  .container-fluid{
+    padding-left: 0;
+  }
+
   nav {
     display: flex;
     justify-content: space-between;
@@ -20,7 +33,7 @@ html,body{
   }
   
   nav ul li{
-    padding-right: 20%;
+    padding-right: 22%;
     font-size: 20px;
   }
   
@@ -90,4 +103,9 @@ footer ul li{
 
 footer p {
     margin-bottom: 0;
+}
+
+.listanav{
+  padding-top: 0;
+  display: block;
 }
