--- a/contato.css
+++ b/contato.css
@@ -60,13 +60,24 @@ html,body{
       margin-top: 5%;
       height: 50%;
       text-align: center;
+      font-size: 20px;
+
   }
 
   .pg2-1{
-    width: 50%;
-    margin-left: 25%;
+    height: 300px;
+    margin-top: 3%;
+    padding-top: 8%;
+    background-color: #eeeeee;
   }
 
+  .pg2-1 h6{
+    font-size: 20px;
+
+  }
+  .pg2-1 p{
+    padding-top: 4%
+  }
   .pg3{
     margin-top: 15%;
     height: 50%;
