--- a/sobre.css
+++ b/sobre.css
@@ -60,7 +60,7 @@ html,body{
       margin-top: 5%;
       text-align: center;
   }
-
+  
   .pg2-1{
     width: 50%;
     margin-left: 25%;
@@ -88,40 +88,86 @@ html,body{
   }
 
   .pg3{
-    margin-top: 15%;
-    height: 50%;
-    width: 80%;
-    margin-left: 10%;
-    
-}
-.pg3-1{
-  width: 50%;
-  margin-left: 25%;
+    margin: 20px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.caixinhas{
-  background-color: #F3F2F2;
-  width: 80%;
-  text-align: center;
-  height: 300px;
-}
+  .container{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 30px 0;
+    padding: 0;
+  }
 
-.caixa{
-  position: absolute;
-  z-index: 0;
-}
+  .container .card{
+    position: relative;
+    width: 280px;
+    height: 350px;
+    background: #F3F2F2;
+    margin: 0px;
+    box-shadow: 0 15px 35px rgba(171, 205, 250, 0.2);
+    border-radius: 15px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(10px);
 
-.foto{
-  background-color: red;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  margin-left: 20%;
-  margin-bottom: 10%;
-  background-image: url('imagem.png');
-  position: absolute;
-  z-index: 1;
-}
+  }
+
+  .container .card .content{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+
+
+  .container .card .content .imgBx{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .container .card .content .imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .container .card .content .contentBx h3{
+    color: rgb(0, 0, 0);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
+    margin: 35px 0 10px;
+    line-height: 1.1em;
+  }
+
+  .container .card .content .contentBx h3 span{
+    font-size: 12px;
+    font-weight: 300;
+    text-transform: initial;
+  }
+
+  #span2{
+    padding-top: 15%;
+    font-size: 10px;
+  }
 
 footer{
   padding-left: 5%;
